# closed_loop_alvar

./: CMakeLists.txt  setup.sh
rundir/: CMakeCache.txt  Makefile  cmake_install.cmake  ffmd
rundir/data/: Makefile  cmake_install.cmake
rundir/demo/: Makefile  cmake_install.cmake  demo3dmarkerfield  demofern  demomarkerfield  demomarkerhide  demomodel2marker  demosfm
rundir/doc/: Makefile  cmake_install.cmake  doxygen.config
rundir/sample/: Makefile  cmake_install.cmake  ffmd  samplecamcalib  samplecvtestbed  samplefilter  sampleintegralimage  samplelabeling  samplemarkercreator  samplemarkerdetector  samplemarkerhide  samplemarkerlesscreator  samplemarkerlessdetector  samplemultimarker  samplemultimarkerbundle  sampleoptimization  samplepointcloud  sampletrack  samplezmqpub  samplezmqsub
rundir/sample/linear_test_1_2014_Aug_26/: PoseLog.csv  timestamps.txt
rundir/src/: Alvar.h  Makefile  cmake_install.cmake
rundir/src/platform/: Makefile  (+1 more)
rundir/test/: BenchmarkOverall  Makefile  cmake_install.cmake
sample/: .ControlClass.h.swp  .CvTestbed.cpp.swp  .FFMD.cpp.swo  .FFMD.cpp.swp  2  CMakeLists.txt  ControlClass.cpp  ControlClass.h  CvTestbed.cpp  CvTestbed.h  CvTestbed_h_new  CvTestbed_new  FFKalmanFilter.h  FFMD.cpp  FFMD_new  SampleCamCalib.cpp  SampleCvTestbed.cpp  SampleIntegralImage.cpp  SampleLabeling.cpp  SampleMarkerDetector.cpp  SampleMarkerHide.cpp  SampleMarkerlessDetector.cpp  SampleMultiMarker.cpp  SampleMultiMarkerBundle.cpp  SamplePointcloud.cpp  SampleTrack.cpp  SampleZMQPub.cpp  SampleZMQSub.cpp  TestFunction.cpp
src/platform/: CMakeLists.txt  Capture.h
src/platform/capture_plugin_png/: CMakeLists.txt  CapturePluginPng.cpp  CapturePluginPng.h
(+18 files in other folders)
